messages: fix header overflow

--- a/client/app/messages/messages.styl
+++ b/client/app/messages/messages.styl
@@ -89,6 +89,13 @@ sidebarItemHeight = 40px
 			background-color: #DEDEDE
 			line-height: headerHeight
 
+			#name
+				width: calc(100% - 40px)
+				white-space: nowrap
+				text-overflow: ellipsis
+				overflow: hidden
+				display: inline-block
+
 			#closeButton
 				float: right
 				margin-top: -3px
@@ -107,7 +114,7 @@ sidebarItemHeight = 40px
 			+below(800px)
 				height: 35px
 				line-height: 35px
-				font-size: 25px
+				font-size: 20px
 
 		#pageContent
 			absolute: top 50px left right bottom
